--- a/src/app/styles/paleta.scss
+++ b/src/app/styles/paleta.scss
@@ -1,2 +1,3 @@
-$main-font: 'Poppins', sans-serif;
+//$main-font: 'Poppins', sans-serif;
+$main-font: 'Karla', sans-serif ;
 $app-header-font: #606060;
