--- a/src/app/core/components/home-three-images/home-three-images.component.scss
+++ b/src/app/core/components/home-three-images/home-three-images.component.scss
@@ -1,7 +1,11 @@
 .one-of-three{
   cursor: pointer;
   margin-bottom: 15px;
+  // to center
+  display: flex;
+  justify-content: center;
   img{
+    max-height: 600px;
     height: 100%;
     object-fit: cover;
   }
