--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,41 +1,43 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<div class="my-3">
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16" [scrollwheel]="false">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-  </agm-map>
-</div>
-
 <div class="container fluid mt-5">
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
-       <div class="d-flex flex-column mobile-center">
-         <p class="box-heading"><b>{{'CONTACT.phone'|translate}}</b></p>
-         <a href="tel:+38166369569" mask="(000)00 000 00 00">+381 66 369 569</a>
-       </div>
+        <div class="d-flex flex-column mobile-center">
+          <p class="box-heading"><b>{{'CONTACT.phone'|translate}}</b></p>
+          <a href="tel:+38166369569" mask="(000)00 000 00 00">+381 66 369 569</a>
+        </div>
       </div>
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column mobile-center">
           <p class="box-heading"><b>WHATSAPP</b></p>
-          <a href="tel:+38166369569">+381 66 369 569</a>
+          <a href="https://wa.me/38166369569">+381 66 369 569</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column mobile-center">
           <p class="box-heading"><b>{{'CONTACT.address'|translate}}</b></p>
-          <p style="font-size: 14px" class="m-0"><b>Djordja Stanojevića 11dj , lokal 3</b></p>
-          <p style="font-size: 14px" class="m-0">Zgrada Jorgovan , Belville</p>
+          <p class="m-0">Djordja Stanojevića 11dj , lokal 3</p>
+          <p class="m-0">Zgrada Jorgovan , Belville</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column mobile-center">
           <p class="box-heading"><b>{{'CONTACT.writeUs'|translate}}</b></p>
-          <p style="font-size: 13px">{{'CONTACT.writeUsText'|translate}}</p>
+          <p >{{'CONTACT.writeUsText'|translate}}</p>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<app-contact-form></app-contact-form>
+<div class="my-3">
+  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16" [scrollwheel]="false">
+    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+  </agm-map>
+</div>
+
+<div class="d-flex justify-content-center">
+  <app-contact-form style="max-width: 800px"></app-contact-form>
+</div>
