--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import "~src/app/styles/paleta";
 
 p {
   margin: 0;
@@ -9,6 +10,8 @@ p {
 * {
   outline: none;
   //user-select: none;
+  font-family: $main-font;
+  font-weight: 300;
 }
 
 html, body {
@@ -17,7 +20,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: $main-font;
 }
 
 /* Importing Bootstrap SCSS file. */
