-Contact fix numbers for viber & whatsapp

--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -12,7 +12,9 @@
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column mobile-center">
           <p class="box-heading"><b>WHATSAPP</b></p>
-          <a href="https://wa.me/38166369569">+381 66 369 569</a>
+          <a href="https://wa.me/+38166369569">+381 66 369 569</a>
+          <p class="box-heading"><b>VIBER</b></p>
+          <a href="viber://chat/?number=%2B38166369569">+381 66 369 569</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
