--- a/src/app/modules/contact/pages/contact.component.scss
+++ b/src/app/modules/contact/pages/contact.component.scss
@@ -24,12 +24,12 @@ agm-map {
     .box-heading {
       margin-bottom: 6px;
       margin-top: 12px;
-      font-size: 14px;
+      //font-size: 14px;
     }
 
-    a, p {
-      font-size: 12px;
-      font-weight: 300;
-    }
+    //a, p {
+    //  font-size: 12px;
+    //  font-weight: 300;
+    //}
   }
 }
