Carousel,Home,Cart,Contact,Toolbar -Mobile toolbar -Carousel with specified items (now =='pumps') -Home with carousel -Sale modal img -Font , etc....

--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-12 d-flex flex-wrap">
       <div class="col-lg-4 one-of-three">
-        <img src="https://identitashoes.com/1home.png" alt="" class="img-fluid" [routerLink]="'/products/bags'">
+        <img src="assets/img/cizme.jpg" alt="" class="img-fluid" [routerLink]="'/products/bags'">
       </div>
       <div class="col-lg-4 one-of-three">
         <img src="https://en.identitashoes.com/m/tel/IMGHOMESTIVALETTI.jpg" alt="" class="img-fluid" [routerLink]="'/products/pumps'">
