--- a/src/app/core/components/sale-modal/sale-modal.component.html
+++ b/src/app/core/components/sale-modal/sale-modal.component.html
@@ -8,7 +8,7 @@
     <div class="row m-0">
         <div class="col-12 p-0 d-flex">
             <div class="col-6 p-0">
-                <img src="https://it.identitashoes.com/m/detail/imghomedetail8.jpg" alt="" class="img-fluid">
+                <img src="https://cdn.shopify.com/s/files/1/0593/1184/9638/files/identita-shoes-76871-copia_c00e627e-d230-4009-a18d-be1e0cfcecc9_360x.jpg?v=1630498774" alt="" class="img-fluid">
             </div>
             <div class="col-6 sale-text p-3 d-flex flex-column justify-content-center align-items-center text-center">
                 <h3>30% POPUST NA SVE IDENTITA MODELE</h3>
