--- a/src/app/modules/contact/pages/contact.component.scss
+++ b/src/app/modules/contact/pages/contact.component.scss
@@ -1,5 +1,6 @@
 agm-map {
-  height: 360px;
+  //height: 360px;
+  height: 460px;
 }
 
 .mobile-center {
@@ -26,10 +27,5 @@ agm-map {
       margin-top: 12px;
       //font-size: 14px;
     }
-
-    //a, p {
-    //  font-size: 12px;
-    //  font-weight: 300;
-    //}
   }
 }
