--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -1,2 +1,7 @@
+<div class="slider-wrapper d-flex justify-content-center">
+    <div class="slider-content d-flex justify-content-center" style="max-width: 840px">
+        <app-slider style="z-index: 10" [slideItems]="randomItems"></app-slider>
+    </div>
+</div>
 <app-home-three-images></app-home-three-images>
 <app-home-four-images></app-home-four-images>
