--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid px-0 mx-0 my-5 overflow-hidden">
+<!--<div class="container-fluid px-0 mx-0 my-5 overflow-hidden">
   <div class="col-lg-12 d-flex flex-wrap flex-sm-wrap-reverse">
     <div class="col-lg-5">
       <img
@@ -28,7 +28,7 @@
       </button>
     </div>
   </div>
-</div>
+</div>-->
 
 <div class="container-fluid my-5">
   <div class="container d-flex justify-content-center">
@@ -71,8 +71,8 @@
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/boots'">
       <img
-        src="https://en.identitashoes.com/m/tel/imghome11222358.png"
-        alt=""
+        src="assets/img/cizme.jpg"
+        alt="La Pista Cizme"
         class="img-fluid position-relative one-four-image"
       />
       <div class="image-overlay">
