--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -36,7 +36,10 @@
 
 <div class="my-3">
   <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16" [scrollwheel]="false">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+    <agm-marker [markerClickable]="true"
+                [iconUrl]="'../../../../assets/img/marker.png'"
+                [latitude]="lat" [longitude]="lng"
+                [title]="title"></agm-marker>
   </agm-map>
 </div>
 
