--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ p {
 * {
   outline: none;
   //user-select: none;
-  font-family: $main-font;
+  //font-family: $main-font;
   font-weight: 300;
 }
 
