-Divided images by resolution & img srcset -Faster loading time

--- a/src/app/core/components/product-detail-image/product-detail-image.component.html
+++ b/src/app/core/components/product-detail-image/product-detail-image.component.html
@@ -1,5 +1,7 @@
 <img
   src="../../../../assets/img/items/{{detailImage}}"
-  alt=""
+  sizes="100vw"
+  srcset="../../../../assets/img/items/375px/{{detailImage}} 300w,../../../../assets/img/items/500px/{{detailImage}} 500w"
+  alt="La pista-Belville-single product image"
   style="height: 300px; width: 300px; object-fit: cover;"
 />
