--- a/src/app/modules/products/pages/products.component.html
+++ b/src/app/modules/products/pages/products.component.html
@@ -3,7 +3,10 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-6" *ngFor="let product of allShoes">
             <!-- ZA GRUPNI PRIKAZ /products -->
             <div class="prod-item text-center" *ngIf="!parametar">
-                <img src="../../../../assets/img/items/{{product?.colors[0]?.image}}" alt="" class="img-fluid"
+                <img src="../../../../assets/img/items/{{product?.colors[0]?.image}}"
+                     srcset="../../../../assets/img/items/375px/{{product?.colors[0]?.image}} 375w,../../../../assets/img/items/500px/{{product?.colors[0]?.image}} 500w"
+                     alt="La pista-Belville-single product image"
+                     class="img-fluid"
                      [routerLink]="'/product/' + product.id"
                      style="cursor: pointer">
                 <p><b>{{product?.name.toUpperCase()}}</b></p>
@@ -15,7 +18,9 @@
             </div>
             <!-- ZA PTIKAZ SVIH SA BOJAMA /products/${param} -->
             <div class="prod-item text-center">
-                <img src="../../../../assets/img/items/{{product?.image}}" alt="" class="img-fluid"
+                <img src="../../../../assets/img/items/{{product?.image}}" class="img-fluid"
+                     srcset="../../../../assets/img/items/375px/{{product?.image}} 375w,../../../../assets/img/items/500px/{{product?.image}} 500w"
+                     alt="La pista-Belville-single product image"
                      [routerLink]="'/product/' + product?.item?.id" style="cursor: pointer">
                 <p><b>{{product?.item?.name.toUpperCase()}}</b></p>
                 <!--        <p>{{product?.item?.price}} RSD</p>-->
