--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -1,5 +1,5 @@
-<div class="slider-wrapper d-flex justify-content-center">
-    <div class="slider-content d-flex justify-content-center" style="max-width: 840px">
+<div class="slider-wrapper d-flex justify-content-center" style="overflow: hidden">
+    <div class="slider-content d-flex justify-content-center" style="max-width: 840px;width: 100%">
         <app-slider style="z-index: 10" [slideItems]="randomItems"></app-slider>
     </div>
 </div>
