--- a/src/app/core/components/slider/slider.component.scss
+++ b/src/app/core/components/slider/slider.component.scss
@@ -23,6 +23,13 @@ carousel {
       font-size: 13px;
     }
   }
+
+  ::ng-deep {
+    // For carousel left/right arrow background color
+    .carousel-arrow {
+      background-color: rgba(255, 255, 255, 0.5) !important;
+    }
+  }
 }
 
 .price--line-through {
