--- a/src/app/core/components/slider/slider.component.scss
+++ b/src/app/core/components/slider/slider.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../src/app/styles/paleta.scss";
+
 carousel {
   height: 360px !important;
   width: 100%;
@@ -5,6 +7,14 @@ carousel {
   p {
     padding: 0;
     margin: 0;
+  }
+
+  p, span.sale-price, button {
+    font-family: $main-font !important;
+  }
+
+  span.sale-price{
+    font-weight: 500;
   }
 
   .carousel-cell {
