--- a/src/app/styles/paleta.scss
+++ b/src/app/styles/paleta.scss
@@ -1,3 +1,4 @@
 //$main-font: 'Poppins', sans-serif;
-$main-font: 'Karla', sans-serif ;
+//$main-font: 'Karla', sans-serif ;
+$main-font: 'Dosis', sans-serif;
 $app-header-font: #606060;
