--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,5 +30,9 @@ body {
   }
 }
 
+button {
+  font-family: $main-font !important;
+}
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
