--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -61,7 +61,7 @@
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/sandals'">
       <img
-        src="https://en.identitashoes.com/m/tel/imghome11222359.png"
+        src="https://ae01.alicdn.com/kf/He61244d9139444979d5a47ffb24c7512c/2021-Women-Sandals-Ladies-High-Heels-Shoes-Woman-Slippers-Open-Toes-Fashion-Party-Female-Lady-Heels.jpg_Q90.jpg_.webp"
         alt=""
         class="img-fluid position-relative one-four-image"
       />
@@ -81,7 +81,7 @@
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/bags'">
       <img
-        src="https://identitashoes.com/4imghome/3.jpg"
+        src="https://cdn.shopify.com/s/files/1/0288/4426/1455/products/Black-workbag-laptopbag-women_1024x1024@2x.jpg?v=1615930121"
         alt=""
         class="img-fluid position-relative one-four-image"
         [routerLink]="'/products'"
