--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="innerWidth > 576">
+<div class="container" *ngIf="innerWidth > 576">
     <div class="toolbar-top d-flex justify-content-between align-items-center">
         <div style="max-width: 25px;" *ngIf="innerWidth > 768">
             <div class="d-flex position-relative align-items-center"
@@ -89,7 +89,6 @@
                 }}</span>
         </div>
     </div>
-
     <div
             class="toolbar-container mt-3 d-flex justify-content-center"
             *ngIf="innerWidth > 768"
@@ -107,10 +106,8 @@
         </div>
     </div>
 </div>
-<!--https://identitashoes.com/shop.png-->
 
 <!-- NEW MENU DESIGN FOR MOBILE DEVICES -->
-<!--MOBILE MENU -->
 <div class="container-fluid toolbar-mobile p-0 d-flex align-items-center"
      *ngIf="innerWidth < 576" style="max-width: 576px;width: 100%">
     <div class="toolbar-mobile-left_mobile-menu "
@@ -128,13 +125,14 @@
             <div class="d-flex">
                 <a style="height: 30px;width: 30px" class="toolbar-mobile-left_toggler-icon"
                    (click)="toggleMobileMenu()">
-<!--                    <img src="../../../../assets/img/menu-icon/004-menu.png"-->
-<!--                         alt="La Pista Mobile menu icon">-->
+                    <!--                    <img src="../../../../assets/img/menu-icon/004-menu.png"-->
+                    <!--                         alt="La Pista Mobile menu icon">-->
                     <mat-icon aria-hidden="false" aria-label="La pista menu icon" style="color: black">menu</mat-icon>
 
                 </a>
                 <div class="toolbar-mobile-left_logo">
-                    <img src="assets/img/svg/lapista-logo-mobile.svg" [routerLink]="'/'" alt="La Pista-Belville Delta City">
+                    <img src="assets/img/svg/lapista-logo-mobile.svg" [routerLink]="'/'"
+                         alt="La Pista-Belville Delta City">
                 </div>
             </div>
         </div>
@@ -153,7 +151,7 @@
                     <div class="d-flex justify-content-between lang-item" *ngFor="let l of languages"
                          style="cursor: pointer"
                          (click)="setLanguage(l)">
-<!--                        <p *ngIf="innerWidth > 576">{{l.name}}</p>-->
+                        <!--                        <p *ngIf="innerWidth > 576">{{l.name}}</p>-->
                         <img class="img-fluid m-0" [src]="l.img" alt="" style="max-height: 20px">
                     </div>
                 </div>
@@ -161,3 +159,4 @@
         </div>
     </div>
 </div>
+<!-- END MOBILE MENU -->
