--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -3,5 +3,8 @@
         <app-slider style="z-index: 10" [slideItems]="randomItems"></app-slider>
     </div>
 </div>
-<app-home-three-images></app-home-three-images>
+<!--<div class="container-fluid m-0 p-0 home-background">-->
+<!--    <button>NEW COLL</button>-->
+<!--</div>-->
+<!--<app-home-three-images></app-home-three-images>-->
 <app-home-four-images></app-home-four-images>
