--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -33,11 +33,8 @@
 <div class="container-fluid my-5">
   <div class="container d-flex justify-content-center">
     <div
-      class="col-6 d-flex flex-column justify-content-center align-items-center"
-    >
-      <p
-        style="font-size: 22px; text-transform: uppercase; letter-spacing: 2px;"
-      >
+      class="col-6 d-flex flex-column justify-content-center align-items-center">
+      <p style="font-size: 22px; text-transform: uppercase; letter-spacing: 2px;">
         <b>{{"HOME.ourWorldHeading" | translate}}</b>
       </p>
       <p style="font-size: 14px; letter-spacing: 1px; line-height: 28px;">
