--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,5 +34,48 @@ button {
   font-family: $main-font !important;
 }
 
+.lapista-button-default {
+  padding: 6px 12px;
+  appearance: none;
+  display: inline-block;
+  width: auto;
+  text-decoration: none;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  background: rgba(58, 58, 58, 0.8);
+  color: white;
+  transition: 0.3s;
+
+  &:hover {
+    transition: 0.3s;
+    background: #3a3a3a;
+  }
+
+  &-bold {
+    padding: 6px 30px;
+    appearance: none;
+    display: inline-block;
+    width: auto;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    font-weight: bold;
+    background: #3a3a3a;
+    color: white;
+    transition: 0.3s;
+
+    &:hover {
+      transition: 0.3s;
+      background: black;
+    }
+  }
+}
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
