-Home * Carousel fix, padding and showing items

--- a/src/app/core/components/slider/slider.component.scss
+++ b/src/app/core/components/slider/slider.component.scss
@@ -2,7 +2,7 @@
 
 carousel {
   height: 360px !important;
-  width: 100%;
+  //width: 100%;
 
   p {
     padding: 0;
@@ -17,7 +17,7 @@ carousel {
     font-weight: 500;
   }
 
-  .carousel-cell {
+/*  .carousel-cell {
     //width: 300px !important;
     //padding: 15px;
     //background: red;
@@ -39,7 +39,7 @@ carousel {
     .carousel-arrow {
       background-color: rgba(255, 255, 255, 0.5) !important;
     }
-  }
+  }*/
 }
 
 .price--line-through {
